some edits for Calendar UI

--- a/Assist/app/src/main/res/layout/activity_calendar_day.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_day.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include9"
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar_date" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,17 +28,6 @@
             android:textColor="@color/blue"
             android:textSize="20sp"
             android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_calendar_day"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:fontFamily="@font/amiko_semibold"
-            android:text="@string/calendar"
-            android:textAlignment="center"
-            android:textColor="@color/gray"
-            android:textSize="20sp" />
 
         <Button
             android:id="@+id/btn_day_right"
@@ -65,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amiko_semibold"
-            android:text="SUN"
+            android:text="S"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="16sp" />
@@ -75,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amiko_semibold"
-            android:text="MON"
+            android:text="M"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="16sp" />
@@ -85,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amiko_semibold"
-            android:text="TUE"
+            android:text="T"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="16sp" />
@@ -95,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amiko_semibold"
-            android:text="WED"
+            android:text="W"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="16sp" />
@@ -105,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amiko_semibold"
-            android:text="THU"
+            android:text="T"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="16sp" />
@@ -115,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amiko_semibold"
-            android:text="FRI"
+            android:text="F"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="16sp" />
@@ -125,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/amiko_semibold"
-            android:text="SAT"
+            android:text="S"
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="16sp" />
