--- a/Assist/app/src/main/res/layout/toolbar_date.xml
+++ b/Assist/app/src/main/res/layout/toolbar_date.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:fontFamily="@font/amiko_bold"
-        android:text="2021"
+        android:text="Month Year"
         android:textColor="#FD4E5D"
         android:textSize="20sp"
         android:textStyle="bold"
