UI edits in input forms, view forms, lists

--- a/Assist/app/src/main/res/layout/activity_add_group.xml
+++ b/Assist/app/src/main/res/layout/activity_add_group.xml
@@ -47,7 +47,7 @@
     <EditText
         android:id="@+id/et_add_group_gname"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="30sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
