--- a/Assist/app/src/main/res/layout/activity_add_contact.xml
+++ b/Assist/app/src/main/res/layout/activity_add_contact.xml
@@ -48,7 +48,7 @@
     <EditText
         android:id="@+id/et_add_contact_fname"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="30sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
@@ -68,7 +68,7 @@
     <EditText
         android:id="@+id/et_add_contact_lname"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="30sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
@@ -88,7 +88,7 @@
     <EditText
         android:id="@+id/et_add_contact_number"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="30sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
@@ -108,7 +108,7 @@
     <EditText
         android:id="@+id/et_add_contact_guardian"
         android:layout_width="0dp"
-        android:layout_height="30dp"
+        android:layout_height="30sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
