--- a/Assist/app/src/main/res/layout/activity_contact.xml
+++ b/Assist/app/src/main/res/layout/activity_contact.xml
@@ -62,7 +62,7 @@
     <TextView
         android:id="@+id/tv_view_contact_number"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="25sp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
 
@@ -88,7 +88,7 @@
     <TextView
         android:id="@+id/tv_view_contact_guardian"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="25sp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
 
