--- a/Assist/app/src/main/res/layout/activity_template.xml
+++ b/Assist/app/src/main/res/layout/activity_template.xml
@@ -48,7 +48,7 @@
     <TextView
         android:id="@+id/tv_view_template_subject"
         android:layout_width="wrap_content"
-        android:layout_height="25dp"
+        android:layout_height="25sp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:drawableLeft="@drawable/subjecticon"
