--- a/Assist/app/src/main/res/layout/activity_calendar_day.xml
+++ b/Assist/app/src/main/res/layout/activity_calendar_day.xml
@@ -29,6 +29,17 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/tv_calender_month_week"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:fontFamily="@font/amiko_semibold"
+            android:text="@string/calendar"
+            android:textAlignment="center"
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
+
         <Button
             android:id="@+id/btn_day_right"
             android:layout_width="0dp"
