--- a/Assist/app/src/main/res/layout/activity_template.xml
+++ b/Assist/app/src/main/res/layout/activity_template.xml
@@ -93,7 +93,9 @@
         android:text="Delete Template"
         android:textAllCaps="false"
         android:textSize="18sp"
-        app:icon="@drawable/deleteicon"
+        android:textColor="#FFFFFF"
+        android:drawablePadding="10dp"
+        android:drawableLeft="@drawable/deleteicon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/gl_view_template_right"
         app:layout_constraintStart_toStartOf="@+id/gl_view_template_left" />
